Working authentication, sign in, sign out, secured WS connections, refactor UI

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .menu li.disabled > *:not(ul):not(details):active, .menu li.disabled > *:not(ul):not(details).active, .menu li.disabled > details > summary:active {
+        background-color: transparent;
+    }
+}
